NIFI-12672 Refactored adls property validation